# gyex

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
